# wordle-solver-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: algorithms.rs  lib.rs  main.rs  solver.rs
src/algorithms/: allocs.rs  once_init.rs  precalc.rs  prune.rs  unoptimized.rs  vecrem.rs  weight.rs
