[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2021"
default-run = "wordle_solver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true


[dependencies]
itertools = "0.10"
clap = { version = "3", features = ["derive"] }
once_cell = "1"
anyhow = "1"